Established as a unity project

--- a/SnapToGround/Editor/jmor.snap-to-ground.Editor.asmdef
+++ b/SnapToGround/Editor/jmor.snap-to-ground.Editor.asmdef
@@ -1,8 +1,18 @@
 {
-	"name": "SnapToGround",
-	"references": [
-		"UnityEngine",
-		"UnityEditor",
-		"UnityEngine.UI"
-	]
+    "name": "SnapToGround",
+    "rootNamespace": "JMor.EditorScripts",
+    "references": [
+        "UnityEngine",
+        "UnityEditor",
+        "UnityEngine.UI"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
