--- a/CustomUIBar/Editor/jmor.custom-ui-bar.Editor.asmdef
+++ b/CustomUIBar/Editor/jmor.custom-ui-bar.Editor.asmdef
@@ -1,8 +1,18 @@
 {
-	"name": "CustomUIBar",
-	"references": [
-		"UnityEngine",
-		"UnityEditor",
-		"UnityEngine.UI"
-	]
+    "name": "CustomUIBar",
+    "rootNamespace": "JMor.EditorScripts",
+    "references": [
+        "UnityEngine",
+        "UnityEditor",
+        "UnityEngine.UI"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
