Updated version and readme

--- a/SnapToGround/Editor/jmor.snap-to-ground.Editor.asmdef
+++ b/SnapToGround/Editor/jmor.snap-to-ground.Editor.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "JMor.EditorScripts",
     "references": [
         "UnityEngine",
-        "UnityEditor",
-        "UnityEngine.UI"
+        "UnityEditor"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
