Massive update for aim assist package

--- a/AimAssist/Editor/jmor.aim-assist.Editor.asmdef
+++ b/AimAssist/Editor/jmor.aim-assist.Editor.asmdef
@@ -1,12 +1,12 @@
 {
-    "name": "AimAssist",
-    "rootNamespace": "JMor.AimAssist",
+    "name": "AimAssistEditor",
+    "rootNamespace": "JMor.AimAssist.Editor",
     "references": [
         "GUID:f3486d759f1e966428221c4fa50e2825",
         "GUID:aaaecf676903f99469f4fc502bd5cab8",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:83478240c739b914abe50276b6227e43",
-        "GUID:c4b928a17263fab49a6bc5c38fb230eb"
+        "GUID:e919e8ab6e9170b48839f3987cf1ff59"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
