--- a/PropertyInspector/package.json
+++ b/PropertyInspector/package.json
@@ -1,9 +1,12 @@
 {
 	"name": "com.jmor.property-inspector",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"displayName": "Property Inspector",
 	"unity": "2021.3",
 	"unityRelease": "4f1",
+	"dependencies": {
+		"com.jmor.utility": "3.0.0"
+	},
 	"description": "Allows for properties in the inspector.\nFull package suite: https://github.com/jmortiger/J-Mor-s-Unity-Packages",
 	"author": {
 		"name": "Justin Morris",
