Update asmdef references to guid

--- a/CustomUIBar/Editor/jmor.custom-ui-bar.Editor.asmdef
+++ b/CustomUIBar/Editor/jmor.custom-ui-bar.Editor.asmdef
@@ -2,11 +2,11 @@
     "name": "CustomUIBar",
     "rootNamespace": "JMor.EditorScripts",
     "references": [
-        "UnityEngine",
-        "UnityEditor",
-        "UnityEngine.UI"
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
